# tego

./: CHANGELOG.md  Cargo.toml  README.md
example-maps/default/: Polygon.tx  default_map.tmx  groups.tmx  image_layer.tmx  mirrored_tiles.tmx  objects.tmx  test.tsx  with_extern_tileset.tmx
example-maps/island/: readme.txt
examples/: layer_printer.rs  rasterizer.rs
scripts/: release.py
src/: errors.rs  lib.rs  math.rs  property.rs  resource_manager.rs
tests/: load_example_map.rs
