[package]
name = "tego"
version = "0.1.0"
authors = ["texel <texelsensei@posteo.net>"]
edition = "2018"
description = "Crate for loading Tiled maps"
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/texel-sensei/tego"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.14.1"
libflate = "1.1.1"
thiserror = "1.0"
