[package]
name = "tego"
version = "0.4.1"
authors = ["texel <texelsensei@posteo.net>"]
edition = "2021"
description = "Crate for loading Tiled maps"
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/texel-sensei/tego"
keywords = ["gamedev", "tmx", "tiled", "mapeditor"]
categories = ["game-development"]

# Exclude example data and tests
exclude = [
	"example-maps/",
	"tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.14.1"
libflate = "1.1.1"
thiserror = "1.0"
base64 = "0.13"
impl_ops = "0.1"

[dev-dependencies]
image = "0.*"
